[tool.poetry]
name = "Zillow Premier API"
version = "0.1.0"
description = "Wrapper for Zillow Premier API to Mimick Requests"
authors = ["Robert Davis <robert@ctproperty.net>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.26.0"

